// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoHeader snapshot 1`] = `
<header class="header">
  <h1>todos</h1> <input placeholder="请输入" autofocus="autofocus" data-testid="new-todo" class="new-todo">
</header>
`;

exports[`TodoHeader.vue snapshot 1`] = `
<header class="header">
  <h1>todos</h1> <input placeholder="What needs to be done?" autofocus="autofocus" data-testid="new-todo" class="new-todo">
</header>
`;
